--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,40 +5,39 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="Bakery"
+        android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-=
-
-        <activity android:name=".Register">
+         <activity android:name=".Register"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:label="@string/title_activity_register">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".MainActivity"
-            android:label="Main Activity">
 
-        </activity>
         <activity
-            android:name=".OrderActivity"
-            android:label="@string/title_activity_order"
-            android:parentActivityName=".MainActivity">
+            android:name=".Login"
+            android:label="@string/title_activity_login"
+            android:parentActivityName=".Register">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.android.bakery.MainActivity" />
+                android:value="com.example.android.bakery.Register" />
         </activity>
+
         <activity
-            android:name=".SettingsActivity"
-            android:label="@string/title_activity_settings"
-            android:parentActivityName=".MainActivity">
+            android:name=".Logout"
+            android:label="@string/title_activity_logout"
+            android:parentActivityName=".Register">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.android.bakery.MainActivity" />
+
+                android:value="com.example.android.bakery.Register" />
         </activity>
+
         <activity android:name=".AppCompatPreferenceActivity" />
     </application>
 
