add EditProfile class and Reset Password button

--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,5 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Mon Nov 16 16:43:08 EST 2020
-sdk.dir=/Users/angela/Library/Android/sdk
+sdk.dir=C\:\\Users\\vince\\AppData\\Local\\Android\\Sdk
+
