--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.android.bakery">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,16 +11,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-         <activity android:name=".Register"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:label="@string/title_activity_register">
+        <activity android:name=".EditProfile"></activity>
+        <activity android:name=".Menu" />
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/title_activity_main" />
+        <activity
+            android:name=".Register"
+            android:label="@string/title_activity_register"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".Login"
             android:label="@string/title_activity_login"
@@ -27,17 +34,14 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.android.bakery.Register" />
         </activity>
-
         <activity
             android:name=".Logout"
             android:label="@string/title_activity_logout"
             android:parentActivityName=".Register">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-
                 android:value="com.example.android.bakery.Register" />
         </activity>
-
         <activity android:name=".AppCompatPreferenceActivity" />
     </application>
 
