Cart, CartAdapter added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,7 @@
                 android:value="com.example.android.bakery.Register" />
         </activity>
         <activity android:name=".AppCompatPreferenceActivity" />
+        <activity android:name=".FoodDetails" />
     </application>
 
 </manifest>
