--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
 
     implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
-    //implementation 'com.google.android.material:material:1.2.1'
+    implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.annotation:annotation:1.1.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'com.firebaseui:firebase-ui-database:6.0.2'
@@ -56,9 +56,11 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage-ktx'
    // implementation 'com.firebaseui:firebase-ui-fir estore:6.2.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
-
+    implementation 'com.cepheuen.elegant-number-button:lib:1.0.3'
+    implementation 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
 
     implementation 'com.android.support:multidex:1.0.3'
+    implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
 
 
 }
