--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,8 @@
         </activity>
         <activity android:name=".AppCompatPreferenceActivity" />
         <activity android:name=".FoodDetails" />
+        <activity android:name=".Cart" />
+
     </application>
 
 </manifest>
